# FunctionalProgramming

./: .gitignore  CMakeLists.txt  Installation_Linux.md  README.md  configure_with_cget.sh  init_with_cget.sh  install.sh  set_env.sh
src/: Correctness_follows_by_expressiveness.cpp  Correctness_follows_from_expressiveness.cpp  Programming_challenge_parse_and_product.cpp  Programming_challenge_parse_and_product.hpp  cli.cpp  cli1.cpp  cli2.cpp  cli_with_compose.cpp  composition.cpp  currying.cpp  forward_application.cpp  forward_application_2.cpp  fplus_test.cpp  function_composition_exercice.cpp  lambdas_and_closures.cpp  polygon_edges.cpp  polygon_high_level.cpp  problem_with_comments.cpp  sql_analogy.cpp  square_values.cpp
